--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 pipeline:
   test:
-  image: golang:1.11-alpine
+  image: library/golang:1.11-alpine
   commands:
   - go get ./...
   - GO_FILES=$(find . -iname '*.go' -type f | grep -v /godogs/ | tr "\n" " ")
