--- a/.drone.yml
+++ b/.drone.yml
@@ -2,7 +2,7 @@ pipeline:
   test:
     image: library/golang:1.11-alpine
     commands:
-    - go get ./...
+    - go get -t ./...
     - GO_FILES=$(find . -iname '*.go' -type f | grep -v /godogs/ | tr "\n" " ")
     - go get github.com/fzipp/gocyclo
     - go test -v
