--- a/.drone.yml
+++ b/.drone.yml
@@ -4,5 +4,5 @@ pipeline:
     commands:
     - go version
     - go get -d ./...
-    - ls /go/bin
-    - ls /go/src
+    - ls /go/bin/
+    - ls /go/src/
