--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ pipeline:
     - apk add git
     - go version
     - go get -d ./...
-    #- go get github.com/stretchr/testify/assert
+    - go get github.com/stretchr/testify/assert
     - go test -v ./...
     - ls
     - ls /go/bin/
